// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExperimentList > renders a list of one experiment 1`] = `
<DocumentFragment>
  <div
    class="page_f1flacxk f9qqjqd"
  >
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root-132 filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-147 MuiInputLabel-root-136 noMargin_fl8qkup MuiInputLabel-formControl-141 MuiInputLabel-animated-144 MuiInputLabel-shrink-143 MuiInputLabel-outlined-146"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root-167 MuiOutlinedInput-root-154 noLeftPadding_f106pxd4 MuiInputBase-formControl-168 MuiInputBase-adornedStart-171 MuiOutlinedInput-adornedStart-157"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-184 MuiOutlinedInput-notchedOutline-161 filterBorderRadius_f1ypp5hy"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-185"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-186 MuiInputAdornment-positionEnd-189"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-191"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-177 MuiOutlinedInput-input-162 MuiInputBase-inputAdornedStart-182 MuiOutlinedInput-inputAdornedStart-165"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss feotlki"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 25%;"
          title="Experiment name"
        >
          <span
            class="MuiButtonBase-root-213 MuiTableSortLabel-root-208 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-191 MuiTableSortLabel-icon-210 MuiTableSortLabel-iconDirectionDesc-211"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 50%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-213 MuiTableSortLabel-root-208 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-191 MuiTableSortLabel-icon-210 MuiTableSortLabel-iconDirectionDesc-211"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 25%;"
          title="Last 5 runs"
        >
          <span
            class="MuiButtonBase-root-213 MuiTableSortLabel-root-208 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Last 5 runs
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-191 MuiTableSortLabel-icon-210 MuiTableSortLabel-iconDirectionDesc-211"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d feotlki"
            data-row-id="test-experiment-id0"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root-213 MuiIconButton-root-240 expandButton_fcy5tjm"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-245"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-191"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                    <path
                      d="M0 24V0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-256"
                />
              </button>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 25%;"
            >
              <a
                class="link_f3dwag7"
                data-experiment-id="test-experiment-id0"
                data-experiment-name="test experiment name0"
                data-testid="experiment-name-link"
                href="/experiments/details/test-experiment-id0"
                title="test experiment name0"
              >
                test experiment name0
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 50%;"
            >
              test experiment description0
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 25%;"
            >
              <div
                class="flex_f16jawj4"
              >
                <span
                  style="margin: 0px 1px;"
                >
                  <div
                    class=""
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-191"
                      data-testid="node-status-sign"
                      focusable="false"
                      role="presentation"
                      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                      />
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-132 verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root-167 MuiInput-root-223 MuiInputBase-formControl-168 MuiInput-formControl-224"
          >
            <div
              class="MuiSelect-root-216"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-217 MuiSelect-selectMenu-220 MuiInputBase-input-177 MuiInput-input-231"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-191 MuiSelect-icon-222"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-213 MuiButtonBase-disabled-214 MuiIconButton-root-240 MuiIconButton-disabled-244"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-245"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-191"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-213 MuiButtonBase-disabled-214 MuiIconButton-root-240 MuiIconButton-disabled-244"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-245"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-191"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentList > renders a list of one experiment with error 1`] = `
<DocumentFragment>
  <div
    class="page_f1flacxk f9qqjqd"
  >
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root-394 filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-409 MuiInputLabel-root-398 noMargin_fl8qkup MuiInputLabel-formControl-403 MuiInputLabel-animated-406 MuiInputLabel-shrink-405 MuiInputLabel-outlined-408"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root-429 MuiOutlinedInput-root-416 noLeftPadding_f106pxd4 MuiInputBase-formControl-430 MuiInputBase-adornedStart-433 MuiOutlinedInput-adornedStart-419"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-446 MuiOutlinedInput-notchedOutline-423 filterBorderRadius_f1ypp5hy"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-447"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-448 MuiInputAdornment-positionEnd-451"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-453"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-439 MuiOutlinedInput-input-424 MuiInputBase-inputAdornedStart-444 MuiOutlinedInput-inputAdornedStart-427"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss feotlki"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 25%;"
          title="Experiment name"
        >
          <span
            class="MuiButtonBase-root-475 MuiTableSortLabel-root-470 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-453 MuiTableSortLabel-icon-472 MuiTableSortLabel-iconDirectionDesc-473"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 50%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-475 MuiTableSortLabel-root-470 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-453 MuiTableSortLabel-icon-472 MuiTableSortLabel-iconDirectionDesc-473"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 25%;"
          title="Last 5 runs"
        >
          <span
            class="MuiButtonBase-root-475 MuiTableSortLabel-root-470 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Last 5 runs
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-453 MuiTableSortLabel-icon-472 MuiTableSortLabel-iconDirectionDesc-473"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d feotlki"
            data-row-id="test-experiment-id0"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root-475 MuiIconButton-root-502 expandButton_fcy5tjm"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-507"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-453"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                    <path
                      d="M0 24V0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-518"
                />
              </button>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 25%;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-453 icon_fxbzgfm"
                focusable="false"
                role="presentation"
                title="Failed to load the last 5 runs of this experiment"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3zM12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
                />
              </svg>
              <a
                class="link_f3dwag7"
                data-experiment-id="test-experiment-id0"
                data-experiment-name="test experiment name0"
                data-testid="experiment-name-link"
                href="/experiments/details/test-experiment-id0"
                title="test experiment name0"
              >
                test experiment name0
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 50%;"
            >
              test experiment description0
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 25%;"
            >
              <div
                class="flex_f16jawj4"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-394 verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root-429 MuiInput-root-485 MuiInputBase-formControl-430 MuiInput-formControl-486"
          >
            <div
              class="MuiSelect-root-478"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-479 MuiSelect-selectMenu-482 MuiInputBase-input-439 MuiInput-input-493"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-453 MuiSelect-icon-484"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-475 MuiButtonBase-disabled-476 MuiIconButton-root-502 MuiIconButton-disabled-506"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-507"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-453"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-475 MuiButtonBase-disabled-476 MuiIconButton-root-502 MuiIconButton-disabled-506"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-507"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-453"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentList > renders a list of one experiment with no description 1`] = `
<DocumentFragment>
  <div
    class="page_f1flacxk f9qqjqd"
  >
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root-263 filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-278 MuiInputLabel-root-267 noMargin_fl8qkup MuiInputLabel-formControl-272 MuiInputLabel-animated-275 MuiInputLabel-shrink-274 MuiInputLabel-outlined-277"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root-298 MuiOutlinedInput-root-285 noLeftPadding_f106pxd4 MuiInputBase-formControl-299 MuiInputBase-adornedStart-302 MuiOutlinedInput-adornedStart-288"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-315 MuiOutlinedInput-notchedOutline-292 filterBorderRadius_f1ypp5hy"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-316"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-317 MuiInputAdornment-positionEnd-320"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-322"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-308 MuiOutlinedInput-input-293 MuiInputBase-inputAdornedStart-313 MuiOutlinedInput-inputAdornedStart-296"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss feotlki"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 25%;"
          title="Experiment name"
        >
          <span
            class="MuiButtonBase-root-344 MuiTableSortLabel-root-339 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-322 MuiTableSortLabel-icon-341 MuiTableSortLabel-iconDirectionDesc-342"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 50%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-344 MuiTableSortLabel-root-339 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-322 MuiTableSortLabel-icon-341 MuiTableSortLabel-iconDirectionDesc-342"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 25%;"
          title="Last 5 runs"
        >
          <span
            class="MuiButtonBase-root-344 MuiTableSortLabel-root-339 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Last 5 runs
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-322 MuiTableSortLabel-icon-341 MuiTableSortLabel-iconDirectionDesc-342"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d feotlki"
            data-row-id="test-experiment-id0"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root-344 MuiIconButton-root-371 expandButton_fcy5tjm"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-376"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-322"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                    <path
                      d="M0 24V0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-387"
                />
              </button>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 25%;"
            >
              <a
                class="link_f3dwag7"
                data-experiment-id="test-experiment-id0"
                data-experiment-name="test experiment name0"
                data-testid="experiment-name-link"
                href="/experiments/details/test-experiment-id0"
                title="test experiment name0"
              >
                test experiment name0
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 50%;"
            />
            <div
              class="cell_fy8nr2z"
              style="width: 25%;"
            >
              <div
                class="flex_f16jawj4"
              >
                <span
                  style="margin: 0px 1px;"
                >
                  <div
                    class=""
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-322"
                      data-testid="node-status-sign"
                      focusable="false"
                      role="presentation"
                      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                      />
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-263 verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root-298 MuiInput-root-354 MuiInputBase-formControl-299 MuiInput-formControl-355"
          >
            <div
              class="MuiSelect-root-347"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-348 MuiSelect-selectMenu-351 MuiInputBase-input-308 MuiInput-input-362"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-322 MuiSelect-icon-353"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-344 MuiButtonBase-disabled-345 MuiIconButton-root-371 MuiIconButton-disabled-375"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-376"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-322"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-344 MuiButtonBase-disabled-345 MuiIconButton-root-371 MuiIconButton-disabled-375"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-376"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-322"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentList > renders an empty list with empty state message 1`] = `
<DocumentFragment>
  <div
    class="page_f1flacxk f9qqjqd"
  >
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root-1 filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-16 MuiInputLabel-root-5 noMargin_fl8qkup MuiInputLabel-formControl-10 MuiInputLabel-animated-13 MuiInputLabel-shrink-12 MuiInputLabel-outlined-15"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root-36 MuiOutlinedInput-root-23 noLeftPadding_f106pxd4 MuiInputBase-formControl-37 MuiInputBase-adornedStart-40 MuiOutlinedInput-adornedStart-26"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-53 MuiOutlinedInput-notchedOutline-30 filterBorderRadius_f1ypp5hy"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-54"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-55 MuiInputAdornment-positionEnd-58"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-46 MuiOutlinedInput-input-31 MuiInputBase-inputAdornedStart-51 MuiOutlinedInput-inputAdornedStart-34"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss feotlki"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 25%;"
          title="Experiment name"
        >
          <span
            class="MuiButtonBase-root-82 MuiTableSortLabel-root-77 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-79 MuiTableSortLabel-iconDirectionDesc-80"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 50%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-82 MuiTableSortLabel-root-77 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-79 MuiTableSortLabel-iconDirectionDesc-80"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 25%;"
          title="Last 5 runs"
        >
          <span
            class="MuiButtonBase-root-82 MuiTableSortLabel-root-77 ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Last 5 runs
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-79 MuiTableSortLabel-iconDirectionDesc-80"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="emptyMessage_f1v5g0b7"
        >
          No experiments found. Click "Create experiment" to start.
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-1 verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root-36 MuiInput-root-92 MuiInputBase-formControl-37 MuiInput-formControl-93"
          >
            <div
              class="MuiSelect-root-85"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-86 MuiSelect-selectMenu-89 MuiInputBase-input-46 MuiInput-input-100"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiSelect-icon-91"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-82 MuiButtonBase-disabled-83 MuiIconButton-root-109 MuiIconButton-disabled-113"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-114"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-82 MuiButtonBase-disabled-83 MuiIconButton-root-109 MuiIconButton-disabled-113"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-114"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentList > renders experiment names as links to their details pages 1`] = `
<DocumentFragment>
  <a
    class="link_f3dwag7"
    data-experiment-id="experiment-id"
    data-experiment-name="experiment name"
    data-testid="experiment-name-link"
    href="/experiments/details/experiment-id"
    title="experiment name"
  >
    experiment name
  </a>
</DocumentFragment>
`;

exports[`ExperimentList > renders last 5 runs statuses 1`] = `
<DocumentFragment>
  <div>
    <div
      class="flex_f16jawj4"
    >
      <span
        style="margin: 0px 1px;"
      >
        <div
          class=""
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-3006"
            data-testid="node-status-sign"
            focusable="false"
            role="presentation"
            style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </div>
      </span>
      <span
        style="margin: 0px 1px;"
      >
        <div
          class=""
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-3006"
            data-testid="node-status-sign"
            focusable="false"
            role="presentation"
            style="color: rgb(154, 160, 166); height: 18px; width: 18px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
        </div>
      </span>
      <span
        style="margin: 0px 1px;"
      >
        <div
          class=""
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-3006"
            data-testid="node-status-sign"
            focusable="false"
            role="presentation"
            style="color: rgb(213, 0, 0); height: 18px; width: 18px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
        </div>
      </span>
      <span
        style="margin: 0px 1px;"
      >
        <div
          class=""
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-3006"
            data-testid="node-status-sign"
            focusable="false"
            role="presentation"
            style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
            />
          </svg>
        </div>
      </span>
      <span
        style="margin: 0px 1px;"
      >
        <div
          class=""
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-3006"
            data-testid="node-status-sign"
            focusable="false"
            role="presentation"
            style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
